--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 h1, h2, h3, h4, h5, h6, body {
   font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
     margin: 0;
@@ -9,7 +13,35 @@ h1, h2, h3, h4, h5, h6, body {
     color: #666;
 }
 
+body {
+  padding-top: 60px;
+}
+
+body, html {
+  height: 100%;
+  background-color: #f5f5f3;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+form, input, form textarea {
+  width: 100%;
+  margin: 5px 0 15px;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: "游ゴシック", "YuGothic";
+}
+
+img {
+  display: inline-block;
+  vertical-align: middle;
+  border: 0;
+}
+
+img, object, embed {
+  max-width: 100%;
+  height: auto;
 }
